# core-engine

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/: settings.json
.github/workflows/: ci.yml
docs/adr/: 0001-three-function-deterministic-core.md  0002-variation-as-parameters.md  0003-engine-sourcing-embeddable-open-offline.md  0004-visible-sunrise-terrain-horizon-profiles.md  0005-offline-correctness-network-independent.md  0006-refraction-and-horizon-optics-seam.md  0007-civil-time-dst-edge-axiom.md  0008-engine-posture-and-sourcing.md  0009-parameter-vector-schema-and-interface-contract.md  0010-engine-language-rust-freestanding.md  0011-serialization-cbor-cddl-cose.md  0012-validation-driven-f1-refinements.md  0013-f1-optics-correction-and-architecture.md  0014-f3-hebrew-calendar-core.md  0015-f2-lunar-and-kiddush-levana.md  0016-couplings-dayroll-daytype-kiddushlevana-talumatar.md  0017-test-hardening-properties-fuzz-determinism-cross-engine.md  0018-cbor-intake-reader-and-terrainprofile.md  0019-poskim-spectrum-is-second-order.md  0020-read-spec-vocabulary-complete.md  0021-fixed-minute-proportional-day-bound.md  0022-daf-yomi-cycle.md  0023-terrain-consistent-proportional-day.md  README.md
docs/spec/: horizon-profile.cddl  parameter-vector-and-interface-contract.md  parameter-vector.cddl  read-spec.cddl
examples/: audit_gra.rs  fp_probe_native.rs
src/: calendar.rs  couplings.rs  daf_yomi.rs  events.rs  ffi.rs  geometry.rs  kiddush_levana.rs  lib.rs  lunar.rs  optics.rs  params.rs  reads.rs  refraction.rs  solar.rs  tekufa.rs  time.rs  units.rs  wire.rs
tests/: calendar.rs  couplings.rs  cross_engine.rs  daf_yomi_oracle.rs  fuzz_no_panic.rs  golden_vectors.rs  israeli_days_oracle.rs  knobs.rs  lunar.rs  moed_oracle.rs  offline_autonomy.rs  properties.rs  read_vocab.rs  regression.rs  second_order.rs  tekufa.rs  terrain.rs  wire.rs
tests/fixtures/: calendar_vectors.csv  daf_yomi_vectors.csv  golden_vectors.csv  golden_vectors_README.md  israeli_days_vectors.csv  kosherjava_vectors.csv  lunar_vectors.csv  regression_snapshot.csv  tekufa_vectors.csv
tools/: KosherDiff.java  fp_probe.mjs
