[package]
name = "core-engine"
version = "0.0.0"
edition = "2021"
publish = false
description = "klboards deterministic zmanim/calendar core engine. F1 (solar) this pass; freestanding no_std (ADR core-domain/0010). See docs/adr."

# rlib for the std integration-test harness; cdylib so the engine can be built to
# wasm32-unknown-unknown for the native-vs-wasm FP-determinism check (ADR core-domain/0010).
[lib]
crate-type = ["rlib", "cdylib"]

[features]
# `std` exists ONLY as a test-ergonomics shim so the std integration harness and the
# freestanding wasm artifact share one crate. The canonical engine artifact builds
# `--no-default-features` (true #![no_std], ADR core-domain/0010). Math is libm either way.
# It also enables `minicbor/alloc` so the host `cargo test` build resolves ONE minicbor
# (derive+alloc) for both the lib and the round-trip tests — without it, resolver-2 builds the lib
# with `derive` and the test with `derive,alloc`, producing two `Encode` impls (a compile error). The
# `--no-default-features` wasm artifact keeps `minicbor` at `derive` only, so it stays no-alloc.
default = ["std"]
std = ["minicbor/alloc"]

[dependencies]
# Pure-Rust, no_std transcendental math. The determinism anchor of ADR core-domain/0010:
# in #![no_std] there is no f64::sin/cos/atan2 (those are std), so the engine is *forced*
# through this vendored libm on every target — native and wasm compile the SAME source.
libm = { version = "0.2", default-features = false }

# CBOR reader for the parameter-vector + horizon-profile intake (ADR core-domain/0011/0018).
# minicbor is the one mainstream CBOR codec that decodes structured values with NO heap, so it
# fits the freestanding build: no `alloc`, no `std` — `default-features = false` keeps it no_std.
minicbor = { version = "0.26", default-features = false, features = ["derive"] }

[dev-dependencies]
# DST-aware IANA tz rendering for the golden-vector harness ONLY. Lives at the edge, never in
# the core (ADR core-domain/0007 boundary, validated by this harness). std + test-only.
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
chrono-tz = "0.10"
# `alloc` (test-only) so the wire round-trip tests can ENCODE reference artifacts (the shipped lib
# reader stays no-alloc; dev-deps never reach the lib/wasm build, so the freestanding guarantee holds).
minicbor = { version = "0.26", default-features = false, features = ["alloc", "derive"] }

[profile.release]
panic = "abort"
